@@ -43,6 +43,7 @@ IN DEVELOPMENT ======= 1.3.0
 - fixed: json flag
 - fixed: framework.clear(), request.clear()
 - fixed: FrameworkMarkdown - parsing of title
+- fixed: templates (throwing of exception by the illegal tags)
 
 - improvements: saving of memory
 - improvements: utils.js
